"convert to mesh from curve" fail if the curve has a bevel. #65052

Closed
opened 2019-05-24 06:55:54 +02:00 by Massimiliano Puliero · 20 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: b3f96da2e6
Worked: blender-2.80.0-git.2a9214eaaf04-windows64

Short description of error
"convert to mesh from curve" operator doesn't work properly if the curve has a bevel object

Exact steps for others to reproduce the error
open the attached file and try to convert the curve to a mesh.

thankyou

convertto.blend
convertto.jpg

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: `b3f96da2e6` Worked: blender-2.80.0-git.2a9214eaaf04-windows64 **Short description of error** "convert to mesh from curve" operator doesn't work properly if the curve has a bevel object **Exact steps for others to reproduce the error** open the attached file and try to convert the curve to a mesh. thankyou [convertto.blend](https://archive.blender.org/developer/F7064567/convertto.blend) ![convertto.jpg](https://archive.blender.org/developer/F7064568/convertto.jpg)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

#65158 was marked as duplicate of this issue

#65158 was marked as duplicate of this issue

#65125 was marked as duplicate of this issue

#65125 was marked as duplicate of this issue

#65105 was marked as duplicate of this issue

#65105 was marked as duplicate of this issue

#65013 was marked as duplicate of this issue

#65013 was marked as duplicate of this issue

Added subscriber: @Gvgeo-1

Added subscriber: @Gvgeo-1

Broken: 2019-05-22 08:33, 85322737ba

Broken: 2019-05-22 08:33, `85322737ba`

Added subscriber: @eruditestudios

Added subscriber: @eruditestudios

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2019-05-24 09:52:46 +02:00

Confirmed, again with that missing evaluated cache data issue:

BLI_assert failed: /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/curve.c:1770, BKE_curve_bevel_make(), at 'cu->bevobj->runtime.curve_cache != ((void *)0)'

@Sergey that is probably a consequence of your recent changes in that area of code? Feel free to reassign to me otherwise.

Confirmed, again with that missing evaluated cache data issue: ``` BLI_assert failed: /home/i74700deb64/blender/__work__/src/source/blender/blenkernel/intern/curve.c:1770, BKE_curve_bevel_make(), at 'cu->bevobj->runtime.curve_cache != ((void *)0)' ``` @Sergey that is probably a consequence of your recent changes in that area of code? Feel free to reassign to me otherwise.

Quite sure it's caused 91ce3087aa.

The real solution is:

  • Make it so BKE_mesh_from_nurbs() doesn't do any in-place modifications and treats all inputs as const.
  • Make "Mesh from Curve" operator to pass evaluated object to the BKE_mesh_from_nurbs().
  • Use the result mesh, assign it to object data do all the other remapping.
  • Profit.
Quite sure it's caused 91ce3087aa7. The real solution is: - Make it so `BKE_mesh_from_nurbs()` doesn't do any in-place modifications and treats all inputs as `const`. - Make "Mesh from Curve" operator to pass evaluated object to the `BKE_mesh_from_nurbs()`. - Use the result mesh, assign it to object data do all the other remapping. - Profit.

Added subscriber: @brecht

Added subscriber: @brecht

Perhaps we could use the code from D4940: Depsgraph API: Allow preserving custom data layers to ensure all data layers are preserved, instead of using the evaluated one directly.

Perhaps we could use the code from [D4940: Depsgraph API: Allow preserving custom data layers](https://archive.blender.org/developer/D4940) to ensure all data layers are preserved, instead of using the evaluated one directly.

That would indeed be a better way to go, and, arguably, easier. Here is a proof-of-concept: P981: #65052

diff --git a/source/blender/editors/object/object_add.c b/source/blender/editors/object/object_add.c
index cb152cb4e49..39753e9b51f 100644
--- a/source/blender/editors/object/object_add.c
+++ b/source/blender/editors/object/object_add.c
@@ -1970,14 +1970,15 @@ static void convert_ensure_curve_cache(Depsgraph *depsgraph, Scene *scene, Objec
   }
 }
 
-static void curvetomesh(Main *bmain, Depsgraph *depsgraph, Scene *scene, Object *ob)
+static void curvetomesh(Main *bmain, Depsgraph *depsgraph, Object *ob)
 {
-  convert_ensure_curve_cache(depsgraph, scene, ob);
-  BKE_mesh_from_nurbs(bmain, ob); /* also does users */
-
-  if (ob->type == OB_MESH) {
-    BKE_object_free_modifiers(ob, 0);
-  }
+  Object *object_eval = DEG_get_evaluated_object(depsgraph, ob);
+  Curve *curve = ob->data;
+  Mesh *mesh = BKE_mesh_new_from_object_to_bmain(bmain, object_eval);
+  ob->data = mesh;
+  ob->type = OB_MESH;
+  id_us_min(&curve->id);
+  id_us_plus(&mesh->id);
 }
 
 static bool convert_poll(bContext *C)
@@ -2233,7 +2234,7 @@ static int convert_exec(bContext *C, wmOperator *op)
       BKE_curve_curve_dimension_update(cu);
 
       if (target == OB_MESH) {
-        curvetomesh(bmain, depsgraph, scene, newob);
+        curvetomesh(bmain, depsgraph, newob);
 
         /* meshes doesn't use displist */
         BKE_object_free_curve_cache(newob);
@@ -2257,7 +2258,7 @@ static int convert_exec(bContext *C, wmOperator *op)
           newob = ob;
         }
 
-        curvetomesh(bmain, depsgraph, scene, newob);
+        curvetomesh(bmain, depsgraph, newob);
 
         /* meshes doesn't use displist */
         BKE_object_free_curve_cache(newob);

Still need to figure out proper remapping of IDs.

That would indeed be a better way to go, and, arguably, easier. Here is a proof-of-concept: [P981: #65052](https://archive.blender.org/developer/P981.txt) ``` diff --git a/source/blender/editors/object/object_add.c b/source/blender/editors/object/object_add.c index cb152cb4e49..39753e9b51f 100644 --- a/source/blender/editors/object/object_add.c +++ b/source/blender/editors/object/object_add.c @@ -1970,14 +1970,15 @@ static void convert_ensure_curve_cache(Depsgraph *depsgraph, Scene *scene, Objec } } -static void curvetomesh(Main *bmain, Depsgraph *depsgraph, Scene *scene, Object *ob) +static void curvetomesh(Main *bmain, Depsgraph *depsgraph, Object *ob) { - convert_ensure_curve_cache(depsgraph, scene, ob); - BKE_mesh_from_nurbs(bmain, ob); /* also does users */ - - if (ob->type == OB_MESH) { - BKE_object_free_modifiers(ob, 0); - } + Object *object_eval = DEG_get_evaluated_object(depsgraph, ob); + Curve *curve = ob->data; + Mesh *mesh = BKE_mesh_new_from_object_to_bmain(bmain, object_eval); + ob->data = mesh; + ob->type = OB_MESH; + id_us_min(&curve->id); + id_us_plus(&mesh->id); } static bool convert_poll(bContext *C) @@ -2233,7 +2234,7 @@ static int convert_exec(bContext *C, wmOperator *op) BKE_curve_curve_dimension_update(cu); if (target == OB_MESH) { - curvetomesh(bmain, depsgraph, scene, newob); + curvetomesh(bmain, depsgraph, newob); /* meshes doesn't use displist */ BKE_object_free_curve_cache(newob); @@ -2257,7 +2258,7 @@ static int convert_exec(bContext *C, wmOperator *op) newob = ob; } - curvetomesh(bmain, depsgraph, scene, newob); + curvetomesh(bmain, depsgraph, newob); /* meshes doesn't use displist */ BKE_object_free_curve_cache(newob); ``` Still need to figure out proper remapping of IDs.

Added subscriber: @Hickz

Added subscriber: @Hickz

Added subscriber: @duncan778

Added subscriber: @duncan778

Added subscriber: @YvesBodson

Added subscriber: @YvesBodson

Added subscriber: @rich1000

Added subscriber: @rich1000

This issue was referenced by a096fbb32d

This issue was referenced by a096fbb32de8980323bfb690e909a76aace905ec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65052
No description provided.